add last update from mirror

--- a/mirrors/bgc/website/index.html
+++ b/mirrors/bgc/website/index.html
@@ -54,6 +54,7 @@
 			<p>
 			(<a href="http://beej.us/guide/">Click here for other guides!</a>)
 
+			<p>Note from Trevcan's mirror site; LAST UPDATED: Fri Aug 13 CDT 2021 </p>
 			<p>Please keep in mind <b><i>this is an alpha-quality
 			document</i></b>. If you have corrections, I'd love to
 			hear them, but understand that even <i>I</i> might not
@@ -142,4 +143,3 @@
 </div>
 
 </html>
-
