netacad fix url redirect

--- a/netacad.html
+++ b/netacad.html
@@ -1,3 +1,7 @@
-<meta http-equiv="refresh" content="0; url=https://www.example.com" />
+<meta http-equiv="refresh" content="0; url="https://www.netacad.com/courses/os-it/ndg-linux-unhatched
 
+/>
+
+
+# courses
 
