--- a/netacad.html
+++ b/netacad.html
@@ -1,5 +1,4 @@
-<meta http-equiv="refresh" content="0; url="https://www.netacad.com/courses/os-it/ndg-linux-unhatched
-
+<meta http-equiv="refresh" content="0; url=https://www.netacad.com/courses/os-it/ndg-linux-unhatched"
 />
 
 
