--- a/movies.html
+++ b/movies.html
@@ -1,4 +1,4 @@
 <meta http-equiv="refresh"
-content="0; url=https://trevcan.github.io/mvs"
+content="0; url=https://trevcan.github.io/www/mvs"
 />
 
