deploy: abce702a9072f0e95e67cd6d8c6a6a968e41e7cf

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <li><a href="articles/tecbot.html">11/09/21  </a></li>
 <li><a href="wl.html">11/09/21 trevcan.github.io/wl </a></li>
 <li><a href="articles/www.html">11/09/21  </a></li>
+<li><a href="yayy.html">11/09/21 finally blog it! </a></li>
 </ul></div>
 <footer>
 
