--- a/yayy.html
+++ b/yayy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>courses</title>
+		<title>finally blog it!</title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -31,15 +31,16 @@
 		<div class="container">
 <!--<div class="container">-->
 
-	<h1>courses</h1>
+	<h1>finally blog it!</h1>
 
 	<i>Last edited: 11/09/21 00:06:44 </i>
 
-
-<ul>
-<li><a href="https://www.netacad.com/courses/os-it/ndg-linux-unhatched">NDG Linux Unhatched English 0421b</a>{:target="_blank"}</li>
-<li><a href="https://linuxjourney.com/">Linux Journey <i>; learn the ways of Linux-fu, for free</i></a>{:target="_blank"}</li>
-</ul>
+<p>
+Hello there, I've just finished mygration of my website
+over to <a href="https://github.com/trevcan/blogit">my fork of blogit</a>
+and so far so good. Just have to fix up the 404 and should
+probably be good to go.
+</p>
 <!--</div>-->
 </div>
 <footer>
