deploy: e16be2d8e68b433edffa9fc48f952c6ffe1fcf20

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,7 +33,7 @@
 
 	<h1>404</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 <p>
 This page does not exist. <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">Go back</a>.
@@ -45,6 +45,8 @@ You may want to have a <a href="https://i.imgur.com/ksl2b1b.jpeg">cookie. <i>don
 Don't like cookies? <a href="https://0x0.st/-dGr.JPG">Have a <i>dog</i> instead</a>
 </p>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
