--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,15 +33,24 @@
 
 	<h1>about:Trevcan</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 <p>
-Hello there, I'm a human! I'm into programming, computers, and of course,
-the beloved <i>linux</i>. I like learning about new things, and enjoy riding
+Hello there, I'm a human! 
+I'm into programming, computers, and of course,
+the beloved <i>linux</i> (I use <a href="http://archlinux.org">arch</a> btw).
+I like learning about new things, and enjoy riding
 bikes, reading books such as 1984 (George Orwell), talking to people,
-and breathing
+and breathing.
+</p>
+<p>
+And yeah, I've decided to start writing / blogging so yeah this is me
+attempting to set up a minimalist blogging system with blogit I guess
+and a tad of github actions automation with gh pages.
 </p>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
