--- a/bookmarks.html
+++ b/bookmarks.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,10 +33,8 @@
 
 	<h1>Bookmarks</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
-
-<h1> Bookmarks</h1>
 
 <h3> Bookmarks bar {#bookmarks-bar add_date="1628991664" last_modified="1634164207" personal_toolbar_folder="true"}</h3>
 
@@ -790,6 +788,8 @@ Fr](https://www.itseyeris.com/book/ocr-gcse-computer-science-9-1-j277)
 DuckDuckGo](https://duckduckgo.com/?q=+ISBN+1910523216+pdf&amp;ia=web)
 </p>
 <!--</div>-->
+
+<i> Tags: <b> html-bookmarks ugly-unformatted-html </b></i>
 </div>
 <footer>
 
