--- a/hacking.av.tba.html
+++ b/hacking.av.tba.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Main</title>
+		<title>Hacking with The Blue Alliance </title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -31,41 +31,34 @@
 		<div class="container">
 <!--<div class="container">-->
 
-	<h1>Main</h1>
+	<h1>Hacking with The Blue Alliance </h1>
 
 	<i>Last edited: 11/09/21 19:30:19 </i>
 
-
-<h1> quick links</h1>
-
-<h1> [later](/wl.md){:target="_blank"}</h1>
-
-<ul>
-<li><a href="/gpg.why">gpg</a>{:target="_blank"}</li>
-</ul>
 <p>
-<a href="http://archlinux.org"><i>L'arch Linux</i></a>{:target="_blank"}
+Another year, another FRC Season. I'm currently in the Tecbot 3158 First 
+Robotics Competition, a great way in which students of all STEM fields can
+show their abilities through teamwork. 
 </p>
 <p>
-<a href="/README.md">readme</a>
+Right now, I'm in the engineering part. My job, for now, is to gather scouting
+data for our team to analyze with maybe some ML models or just to make simple
+statistics. 
 </p>
 
-<ul>
-<li>aspell is this thingy that checks for spelling and stuff</li>
-  - <a href="http://aspell.net/test/cur/">Available Aspell Dictionaries</a>{:target="_blank"}
-  - <a href="http://aspell.net/">GNU Aspell</a>{:target="_blank"}
-</ul>
+<h2> setup</h2>
+<p>
+Thankfully, TBA (<i>the blue alliance</i>) has a public read-access (and write, i 
+believe) API, it's JSON and it lets you access almost everything. You just
+have to sign in with google and get an API key. Now use any HTTP-GET
+friendly request to retrieve data. Just remember to assign the HTTP header 
+<code>X-TBA-Auth-Key</code> to the API key you receive.
+</p>
 
-<ul>
-<li><a href="https://www.youtube.com/watch?v=sp0qgpeG6EY">Luke's: High-Intellect Mathematical Formatting with eqn! (groff and troff)</a> </li>
-</ul>
-
-<ul>
-<li>Convert from HTML to markdown: <code>pandoc -f html -t markdown bookmarks.html &gt; bookmarks.md</code></li>
-</ul>
+<h3> </h3>
 <!--</div>-->
 
-<i> Tags: <b> quick-links </b></i>
+<i> Tags: <b> tecbot TBA API C </b></i>
 </div>
 <footer>
 
