--- a/idk-learn-pedantics-blogit.html
+++ b/idk-learn-pedantics-blogit.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,7 +33,7 @@
 
 	<h1>Learn how to use pedantic.software/git/blogit !!</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 <p>
 originally posted on : 2021-11-06
@@ -54,6 +54,8 @@ doing it right fucking know lol. I guess I'll create a test repo where I can idk
 do shit and test <code>blogit</code>.
 </p>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
