--- a/quotes.html
+++ b/quotes.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,7 +33,7 @@
 
 	<h1>quotes</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 
 <ul>
@@ -43,6 +43,8 @@
 <li></li>
 </ul>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
