--- a/wl.html
+++ b/wl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title># trevcan.github.io/wl</title>
+		<title>watch later</title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -31,14 +31,14 @@
 		<div class="container">
 <!--<div class="container">-->
 
-	<h1># trevcan.github.io/wl</h1>
+	<h1>watch later</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 <p>
 wl as in...
+<a href="#">#</a> watch later
 </p>
-<h1> watch later</h1>
 
 <h2> lire </h2>
 
@@ -101,6 +101,8 @@ wl as in...
 <li><a href="https://www.ling.upenn.edu/courses/Fall_2007/ling001/morphology.html">whatis a word</a></li>
 </ul>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
