--- a/yayy.html
+++ b/yayy.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,7 +33,7 @@
 
 	<h1>finally blog it!</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 <p>
 Hello there, I've just finished mygration of my website
@@ -42,6 +42,8 @@ and so far so good. Just have to fix up the 404 and should
 probably be good to go.
 </p>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
