--- a/@quick-links.html
+++ b/@quick-links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Main</title>
+		<title>Articles tagged quick-links</title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="http://trevcan.github.io/">
+				<a href="">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -29,44 +29,9 @@
 	</head><body>
 
 		<div class="container">
-<!--<div class="container">-->
-
-	<h1>Main</h1>
-
-	<i>Last edited: 11/09/21 19:30:19 </i>
-
-
-<h1> quick links</h1>
-
-<h1> [later](/wl.md){:target="_blank"}</h1>
-
-<ul>
-<li><a href="/gpg.why">gpg</a>{:target="_blank"}</li>
-</ul>
-<p>
-<a href="http://archlinux.org"><i>L'arch Linux</i></a>{:target="_blank"}
-</p>
-<p>
-<a href="/README.md">readme</a>
-</p>
-
-<ul>
-<li>aspell is this thingy that checks for spelling and stuff</li>
-  - <a href="http://aspell.net/test/cur/">Available Aspell Dictionaries</a>{:target="_blank"}
-  - <a href="http://aspell.net/">GNU Aspell</a>{:target="_blank"}
-</ul>
-
-<ul>
-<li><a href="https://www.youtube.com/watch?v=sp0qgpeG6EY">Luke's: High-Intellect Mathematical Formatting with eqn! (groff and troff)</a> </li>
-</ul>
-
-<ul>
-<li>Convert from HTML to markdown: <code>pandoc -f html -t markdown bookmarks.html &gt; bookmarks.md</code></li>
-</ul>
-<!--</div>-->
-
-<i> Tags: <b> quick-links </b></i>
-</div>
+<h2>Articles</h2><ul><li><a href="README.html">11/09/21 Trevcan Readme </a></li>
+<li><a href="main.html">11/09/21 Main </a></li>
+</ul></div>
 <footer>
 
 	<span>
