--- a/courses.html
+++ b/courses.html
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="">
+				<a href="http://trevcan.github.io/">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -33,7 +33,7 @@
 
 	<h1>courses</h1>
 
-	<i>Last edited: 11/09/21 11:28:55 </i>
+	<i>Last edited: 11/09/21 19:30:19 </i>
 
 
 <ul>
@@ -41,6 +41,8 @@
 <li><a href="https://linuxjourney.com/">Linux Journey <i>; learn the ways of Linux-fu, for free</i></a>{:target="_blank"}</li>
 </ul>
 <!--</div>-->
+
+<i> Tags: <b> </b></i>
 </div>
 <footer>
 
