fix redirect broken link

--- a/data/mit.actividad.6.html
+++ b/data/mit.actividad.6.html
@@ -51,9 +51,9 @@
             </h1>
 			<p>
 			<h1>
-				url: actividad.6.pagina.publicada/animales.html 
+				url: sk/actividad.6.pagina.publicada/animales.html 
 			</h1>
-            <meta content="3; url=actividad.6.pagina.publicada/animales.html" http-equiv="refresh"/>
+            <meta content="3; url=sk/actividad.6.pagina.publicada/animales.html" http-equiv="refresh"/>
         </div>
         <footer>
             <span>
