deploy: 5b298fdb106a4e773f88daf538b2b66552796a64

--- a/blooaub.html
+++ b/blooaub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Learn how to use pedantic.software/git/blogit !!</title>
+		<title>En parlant français</title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -31,31 +31,32 @@
 		<div class="container">
 <!--<div class="container">-->
 
-	<h1>Learn how to use pedantic.software/git/blogit !!</h1>
+	<h1>En parlant français</h1>
 
 	<i>Last edited: 11/09/21 22:02:36 </i>
 
 <p>
-originally posted on : 2021-11-06
-</p>
-<h1> Hello there,</h1>
-<p>
-I've been trying out several bloggin systems but none of them seem to work
-as I expect them. Well, to be frank, the only blogging systems I've been
-trying are only Jekyll/Github based. The only thing I want is a nice 
-<a href="https://github.com/tocttou/hacker-blog">hacker-like</a> aesthethic because
-why not and minimalist software that doesn't have a ton shit of folders like
-Jekyll, **I just don't get why I can't add posts anywhere other than in <code>_posts/</code>!!**.
+Bonjour, ça c'est seulement un petit blog post
+où j'essaye parler français et aussi pour vérifier
+que le système autonome fonctionne. Le suivants mots
+monteraient un peux de comme fonctionne le système pour
+faire le blog possible.
 </p>
 <p>
-Also, this is a check to see if this post actually gets built because only the 
-sample posts have appeared so far !!. <b>Edit</b>: You know what?, why not start
-doing it right fucking know lol. I guess I'll create a test repo where I can idk
-do shit and test <code>blogit</code>.
+Donc, je suis un peux ennuiyéx et enfadé des systèmes,
+articles, blogs qui utilise espàce comme s'il était libre.
+Presque toutes les sites web que je visite son très très
+<i>bloated</i> et ils avaient beaucoup de choses qui n'aide pas
+la lecture du site ou l'absorption d'information ou la 
+transference d'idées.
+</p>
+<p>
+Je doit faire un travail d'école mais je continuera
+peut-être demain.
 </p>
 <!--</div>-->
 
-<i> Tags: <b> </b></i>
+<i> Tags: <b> fr write </b></i>
 </div>
 <footer>
 
