--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 	</head><body>
 
 		<div class="container">
-<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a></p><h2>Articles</h2><ul><li><a href="404.html">11/09/21 404 </a></li>
+<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/09/21 404 </a></li>
 <li><a href="README.html">11/09/21 Trevcan Readme </a></li>
 <li><a href="about.html">11/09/21 about:Trevcan </a></li>
+<li><a href="blooaub.html">11/09/21 En parlant français </a></li>
 <li><a href="bookmarks.html">11/09/21 Bookmarks </a></li>
 <li><a href="courses.html">11/09/21 courses </a></li>
 <li><a href="gpg.why.bbs.html">11/09/21 Arch Linux Bulletin Board System Post </a></li>
