--- a/@fr.html
+++ b/@fr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Learn how to use pedantic.software/git/blogit !!</title>
+		<title>Articles tagged fr</title>
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -9,7 +9,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="http://trevcan.github.io/">
+				<a href="">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -29,34 +29,8 @@
 	</head><body>
 
 		<div class="container">
-<!--<div class="container">-->
-
-	<h1>Learn how to use pedantic.software/git/blogit !!</h1>
-
-	<i>Last edited: 11/09/21 22:02:36 </i>
-
-<p>
-originally posted on : 2021-11-06
-</p>
-<h1> Hello there,</h1>
-<p>
-I've been trying out several bloggin systems but none of them seem to work
-as I expect them. Well, to be frank, the only blogging systems I've been
-trying are only Jekyll/Github based. The only thing I want is a nice 
-<a href="https://github.com/tocttou/hacker-blog">hacker-like</a> aesthethic because
-why not and minimalist software that doesn't have a ton shit of folders like
-Jekyll, **I just don't get why I can't add posts anywhere other than in <code>_posts/</code>!!**.
-</p>
-<p>
-Also, this is a check to see if this post actually gets built because only the 
-sample posts have appeared so far !!. <b>Edit</b>: You know what?, why not start
-doing it right fucking know lol. I guess I'll create a test repo where I can idk
-do shit and test <code>blogit</code>.
-</p>
-<!--</div>-->
-
-<i> Tags: <b> </b></i>
-</div>
+<h2>Articles</h2><ul><li><a href="blooaub.html">11/09/21 En parlant français </a></li>
+</ul></div>
 <footer>
 
 	<span>
