deploy: 3fb0ade0b1b719444c03db9470868585551a94a6

--- a/@tecbot.html
+++ b/@tecbot.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>Articles tagged tecbot</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -29,7 +30,7 @@
 	</head><body>
 
 		<div class="container">
-<h2>Articles</h2><ul><li><a href="hacking.av.tba.html">11/09/21 Hacking with The Blue Alliance  </a></li>
+<h2>Articles</h2><ul><li><a href="hacking.av.tba.html">11/10/21 Hacking with The Blue Alliance  </a></li>
 </ul></div>
 <footer>
 
