--- a/bookmarks.html
+++ b/bookmarks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>Bookmarks</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -33,7 +34,7 @@
 
 	<h1>Bookmarks</h1>
 
-	<i>Last edited: 11/09/21 22:02:36 </i>
+	<i>Last edited: 11/10/21 12:40:47 </i>
 
 
 <h3> Bookmarks bar {#bookmarks-bar add_date="1628991664" last_modified="1634164207" personal_toolbar_folder="true"}</h3>
