--- a/@entertainment.html
+++ b/@entertainment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>Articles tagged entertainment</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -29,7 +30,7 @@
 	</head><body>
 
 		<div class="container">
-<h2>Articles</h2><ul><li><a href="mvs.html">11/09/21 Movies </a></li>
+<h2>Articles</h2><ul><li><a href="mvs.html">11/10/21 Movies </a></li>
 </ul></div>
 <footer>
 
