--- a/gpg.why.html
+++ b/gpg.why.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>Why is GnuPG acting up ? </title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -33,7 +34,7 @@
 
 	<h1>Why is GnuPG acting up ? </h1>
 
-	<i>Last edited: 11/09/21 22:02:36 </i>
+	<i>Last edited: 11/10/21 12:40:47 </i>
 
 <p>
 After trying several things to fix encryption and decryption in GnuPG I have no 
