--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>trevcan's blog</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -29,22 +30,22 @@
 	</head><body>
 
 		<div class="container">
-<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/09/21 404 </a></li>
-<li><a href="README.html">11/09/21 Trevcan Readme </a></li>
-<li><a href="about.html">11/09/21 about:Trevcan </a></li>
-<li><a href="blooaub.html">11/09/21 En parlant français </a></li>
-<li><a href="bookmarks.html">11/09/21 Bookmarks </a></li>
-<li><a href="courses.html">11/09/21 courses </a></li>
-<li><a href="gpg.why.bbs.html">11/09/21 Arch Linux Bulletin Board System Post </a></li>
-<li><a href="gpg.why.html">11/09/21 Why is GnuPG acting up ?  </a></li>
-<li><a href="hacking.av.tba.html">11/09/21 Hacking with The Blue Alliance  </a></li>
-<li><a href="idk-learn-pedantics-blogit.html">11/09/21 Learn how to use pedantic.software/git/blogit !! </a></li>
-<li><a href="main.html">11/09/21 Main </a></li>
-<li><a href="mvs.html">11/09/21 Movies </a></li>
-<li><a href="quotes.html">11/09/21 quotes </a></li>
-<li><a href="stand-up-thy-self.html">11/09/21 Luke: 'Will you ever stand up for yourself ?' </a></li>
-<li><a href="wl.html">11/09/21 watch later </a></li>
-<li><a href="yayy.html">11/09/21 finally blog it! </a></li>
+<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/10/21 404 </a></li>
+<li><a href="README.html">11/10/21 Trevcan Readme </a></li>
+<li><a href="about.html">11/10/21 about:Trevcan </a></li>
+<li><a href="blooaub.html">11/10/21 En parlant français </a></li>
+<li><a href="bookmarks.html">11/10/21 Bookmarks </a></li>
+<li><a href="courses.html">11/10/21 courses </a></li>
+<li><a href="gpg.why.bbs.html">11/10/21 Arch Linux Bulletin Board System Post </a></li>
+<li><a href="gpg.why.html">11/10/21 Why is GnuPG acting up ?  </a></li>
+<li><a href="hacking.av.tba.html">11/10/21 Hacking with The Blue Alliance  </a></li>
+<li><a href="idk-learn-pedantics-blogit.html">11/10/21 Learn how to use pedantic.software/git/blogit !! </a></li>
+<li><a href="main.html">11/10/21 Main </a></li>
+<li><a href="mvs.html">11/10/21 Movies </a></li>
+<li><a href="quotes.html">11/10/21 quotes </a></li>
+<li><a href="stand-up-thy-self.html">11/10/21 Luke: 'Will you ever stand up for yourself ?' </a></li>
+<li><a href="wl.html">11/10/21 watch later </a></li>
+<li><a href="yayy.html">11/10/21 finally blog it! </a></li>
 </ul></div>
 <footer>
 
