--- a/stand-up-thy-self.html
+++ b/stand-up-thy-self.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>Luke: 'Will you ever stand up for yourself ?'</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -33,7 +34,7 @@
 
 	<h1>Luke: 'Will you ever stand up for yourself ?'</h1>
 
-	<i>Last edited: 11/09/21 22:02:36 </i>
+	<i>Last edited: 11/10/21 12:40:47 </i>
 
 <p>
 <a href="https://videos.lukesmith.xyz/w/aWCVkSQTXKJ1yuR6o8zjDY">his video</a>
