--- a/yayy.html
+++ b/yayy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head>
 		<title>finally blog it!</title>
+		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
@@ -33,7 +34,7 @@
 
 	<h1>finally blog it!</h1>
 
-	<i>Last edited: 11/09/21 22:02:36 </i>
+	<i>Last edited: 11/10/21 12:40:47 </i>
 
 <p>
 Hello there, I've just finished mygration of my website
