deploy: 25f4b8939de8c8925e26747d687c149fe2e0a0cb

--- a/@mit.html
+++ b/@mit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Hacking with The Blue Alliance </title>
+		<title>Articles tagged mit</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
@@ -10,7 +10,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="http://trevcan.github.io/">
+				<a href="">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -30,37 +30,8 @@
 	</head><body>
 
 		<div class="container">
-<!--<div class="container">-->
-
-	<h1>Hacking with The Blue Alliance </h1>
-
-	<i>Last edited: 11/10/21 13:19:18 </i>
-
-<p>
-Another year, another FRC Season. I'm currently in the Tecbot 3158 First 
-Robotics Competition, a great way in which students of all STEM fields can
-show their abilities through teamwork. 
-</p>
-<p>
-Right now, I'm in the engineering part. My job, for now, is to gather scouting
-data for our team to analyze with maybe some ML models or just to make simple
-statistics. 
-</p>
-
-<h2> setup</h2>
-<p>
-Thankfully, TBA (<i>the blue alliance</i>) has a public read-access (and write, i 
-believe) API, it's JSON and it lets you access almost everything. You just
-have to sign in with google and get an API key. Now use any HTTP-GET
-friendly request to retrieve data. Just remember to assign the HTTP header 
-<code>X-TBA-Auth-Key</code> to the API key you receive.
-</p>
-
-<h3> </h3>
-<!--</div>-->
-
-<i> Tags: <b> tecbot TBA API C </b></i>
-</div>
+<h2>Articles</h2><ul><li><a href="notes-calculus.html">11/10/21 Derivatives Stuff Calculus </a></li>
+</ul></div>
 <footer>
 
 	<span>
