--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</head><body>
 
 		<div class="container">
-<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/10/21 404 </a></li>
+<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@mit.html">mit</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/10/21 404 </a></li>
 <li><a href="README.html">11/10/21 Trevcan Readme </a></li>
 <li><a href="about.html">11/10/21 about:Trevcan </a></li>
 <li><a href="blooaub.html">11/10/21 En parlant français </a></li>
@@ -42,6 +42,7 @@
 <li><a href="idk-learn-pedantics-blogit.html">11/10/21 Learn how to use pedantic.software/git/blogit !! </a></li>
 <li><a href="main.html">11/10/21 Main </a></li>
 <li><a href="mvs.html">11/10/21 Movies </a></li>
+<li><a href="notes-calculus.html">11/10/21 Derivatives Stuff Calculus </a></li>
 <li><a href="quotes.html">11/10/21 quotes </a></li>
 <li><a href="stand-up-thy-self.html">11/10/21 Luke: 'Will you ever stand up for yourself ?' </a></li>
 <li><a href="wl.html">11/10/21 watch later </a></li>
