--- a/notes-calculus.html
+++ b/notes-calculus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Hacking with The Blue Alliance </title>
+		<title>Derivatives Stuff Calculus</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
@@ -32,34 +32,32 @@
 		<div class="container">
 <!--<div class="container">-->
 
-	<h1>Hacking with The Blue Alliance </h1>
+	<h1>Derivatives Stuff Calculus</h1>
 
 	<i>Last edited: 11/10/21 13:19:18 </i>
 
 <p>
-Another year, another FRC Season. I'm currently in the Tecbot 3158 First 
-Robotics Competition, a great way in which students of all STEM fields can
-show their abilities through teamwork. 
-</p>
-<p>
-Right now, I'm in the engineering part. My job, for now, is to gather scouting
-data for our team to analyze with maybe some ML models or just to make simple
-statistics. 
+day: nov 10 2021
 </p>
 
-<h2> setup</h2>
-<p>
-Thankfully, TBA (<i>the blue alliance</i>) has a public read-access (and write, i 
-believe) API, it's JSON and it lets you access almost everything. You just
-have to sign in with google and get an API key. Now use any HTTP-GET
-friendly request to retrieve data. Just remember to assign the HTTP header 
-<code>X-TBA-Auth-Key</code> to the API key you receive.
-</p>
+<ul>
+<li>critical points;</li>
+  - the x-values within the domain of f(x)
+</ul>
 
-<h3> </h3>
+<ul>
+<li>relative extrema;</li>
+  - local y-values, maximum &amp; min values.
+</ul>
+
+<ul>
+<li>absolute extrema;</li>
+  - global largest or smallest
+<li>increasing &amp; decreasing intervals.</li>
+</ul>
 <!--</div>-->
 
-<i> Tags: <b> tecbot TBA API C </b></i>
+<i> Tags: <b> mit </b></i>
 </div>
 <footer>
 
