deploy: 4b9782c07ccb636f0a849f4702b3c2d87de585f5

--- a/@en.html
+++ b/@en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>404</title>
+		<title>Articles tagged en</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
@@ -10,7 +10,7 @@
 				<!-- 
 					<a href="https://trevcan.github.io"> 
 				-->
-				<a href="http://trevcan.github.io/">
+				<a href="">
 
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
@@ -30,25 +30,9 @@
 	</head><body>
 
 		<div class="container">
-<!--<div class="container">-->
-
-	<h1>404</h1>
-
-	<i>Last edited: 11/10/21 18:41:11 </i>
-
-<p>
-This page does not exist. <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">Go back</a>.
-</p>
-<p>
-You may want to have a <a href="https://i.imgur.com/ksl2b1b.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>, <a href="https://i.imgur.com/ksl2b1b.jpeg"><i>mirror</i></a>.
-</p>
-<p>
-Don't like cookies? <a href="https://0x0.st/-dGr.JPG">Have a <i>dog</i> instead</a>
-</p>
-<!--</div>-->
-
-<i> Tags: <b> </b></i>
-</div>
+<h2>Articles</h2><ul><li><a href="mvs.html">11/10/21 Movies </a></li>
+<li><a href="why-blogit.html">11/10/21 How do I fix this blogit? </a></li>
+</ul></div>
 <footer>
 
 	<span>
