--- a/@write.html
+++ b/@write.html
@@ -31,6 +31,7 @@
 
 		<div class="container">
 <h2>Articles</h2><ul><li><a href="blooaub.html">11/10/21 En parlant français </a></li>
+<li><a href="why-blogit.html">11/10/21 How do I fix this blogit? </a></li>
 </ul></div>
 <footer>
 
