--- a/index.html
+++ b/index.html
@@ -1,80 +1,91 @@
-<!DOCTYPE html><html><head>
-		<title>trevcan's blog</title>
-		<meta charset="utf-8">
-		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
-		<link rel="stylesheet" href="main.css">
-
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>
+			trevcan's blog
+		</title>
+		<link href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" rel="shortcut icon" type="image/png"/>
+		<link href="https://trevcan.duckdns.org/blog/main.css" rel="stylesheet"/>
 		<header>
 			<div>
-				<!-- 
-					<a href="https://trevcan.github.io"> 
-				-->
 				<a href="http://trevcan.github.io/">
-
 					<!--
 						<h1>trevcan@internets /random/path/idk $</h1>
 					-->
-					<h1>trevcan@internets /random/yourpath $</h1>
+					<h1>
+						trevcan@internets /random/yourpath $
+					</h1>
 				</a>
 				<div class="header-links">
-					<a href="index.html"><h2 class="header-link">Index</h2></a>
-					<a href="about.html"><h2 class="header-link">About</h2></a>
-					<a href="rss.xml"><h2 class="header-link">RSS</h2></a>
-					<a href="atom.xml"><h2 class="header-link">/atom</h2></a>
+					<a href="index.html">
+						<h2 class="header-link">
+							Index
+						</h2>
+					</a>
+					<a href="about.html">
+						<h2 class="header-link">
+							About
+						</h2>
+					</a>
+					<a href="rss.xml">
+						<h2 class="header-link">
+							RSS
+						</h2>
+					</a>
+					<a href="atom.xml">
+						<h2 class="header-link">
+							/atom
+						</h2>
+					</a>
 				</div>
 			</div>
 		</header>
-
-
-	</head><body>
-
+	</head>
+	<body>
 		<div class="container">
-<p>Tags:<a href="@API.html">API</a>, <a href="@C.html">C</a>, <a href="@TBA.html">TBA</a>, <a href="@en.html">en</a>, <a href="@entertainment.html">entertainment</a>, <a href="@fr.html">fr</a>, <a href="@html-bookmarks.html">html-bookmarks</a>, <a href="@log-luke.html">log-luke</a>, <a href="@mit.html">mit</a>, <a href="@movies.html">movies</a>, <a href="@quick-links.html">quick-links</a>, <a href="@random-links.html">random-links</a>, <a href="@readme.html">readme</a>, <a href="@site-update.html">site-update</a>, <a href="@tecbot.html">tecbot</a>, <a href="@tldr.html">tldr</a>, <a href="@tv-shows.html">tv-shows</a>, <a href="@ugly-unformatted-html.html">ugly-unformatted-html</a>, <a href="@write.html">write</a></p><h2>Articles</h2><ul><li><a href="404.html">11/10/21 404 </a></li>
-<li><a href="README.html">11/10/21 Trevcan Readme </a></li>
-<li><a href="about.html">11/10/21 about:Trevcan </a></li>
-<li><a href="blooaub.html">11/10/21 En parlant français </a></li>
-<li><a href="bookmarks.html">11/10/21 Bookmarks </a></li>
-<li><a href="courses.html">11/10/21 courses </a></li>
-<li><a href="gpg.why.bbs.html">11/10/21 Arch Linux Bulletin Board System Post </a></li>
-<li><a href="gpg.why.html">11/10/21 Why is GnuPG acting up ?  </a></li>
-<li><a href="hacking.av.tba.html">11/10/21 Hacking with The Blue Alliance  </a></li>
-<li><a href="idk-learn-pedantics-blogit.html">11/10/21 Learn how to use pedantic.software/git/blogit !! </a></li>
-<li><a href="main.html">11/10/21 Main </a></li>
-<li><a href="mvs.html">11/10/21 Movies </a></li>
-<li><a href="notes-calculus.html">11/10/21 Derivatives Stuff Calculus </a></li>
-<li><a href="quotes.html">11/10/21 quotes </a></li>
-<li><a href="stand-up-thy-self.html">11/10/21 Luke: 'Will you ever stand up for yourself ?' </a></li>
-<li><a href="why-blogit.html">11/10/21 How do I fix this blogit? </a></li>
-<li><a href="wl.html">11/10/21 watch later </a></li>
-<li><a href="yayy.html">11/10/21 finally blog it! </a></li>
-</ul></div>
-<footer>
+			<h1>
+				Redirecting to Trevcan's blog			</h1>
+			<p>
+			<h1>
+				https://trevcan.duckdns.org/blog/index.html
 
-	<span>
-		<!--
-			<b>By trevcan : Hector Canizales;</b>
-		-->
-		<b>By trevcan : Hector Canizales;</b>
-	</span>
-	<a href="LICENSE">
-		<span>© sometime to ∞</span>
-	</a>
-	<p>
-	<span>
-		<b>Powered by my </b>
-	</span>
-	<a href="https://github.com/trevcan/blogit">
-		<span>fork of blogit</span>
-	</a>
-	<span>
-		and tocttou's beautiful
-	</span>
-	<a href="https://github.com/tocttou/hacker-blog/blob/master/_sass/base.scss">
-		<span>css</span>
-	</a>
-
-
-</footer>
-
-</body></html>
+			</h1>
+			<meta content="3; url=https://trevcan.duckdns.org/blog/index.html" http-equiv="refresh"/>
+		</div>
+		<footer>
+			<span>
+				<!--
+					<b>By trevcan : Hector Canizales;</b>
+				-->
+				<b>
+					By trevcan : Hector Canizales;
+				</b>
+			</span>
+			<a href="LICENSE">
+				<span>
+					© sometime to ∞
+				</span>
+			</a>
+			<p>
+			<span>
+				<b>
+					Powered by my
+				</b>
+			</span>
+			<a href="https://github.com/trevcan/blogit">
+				<span>
+					fork of blogit
+				</span>
+			</a>
+			<span>
+				and tocttou's beautiful
+			</span>
+			<a href="https://github.com/tocttou/hacker-blog/blob/master/_sass/base.scss">
+				<span>
+					css
+				</span>
+			</a>
+			</p>
+		</footer>
+	</body>
+</html>
