add cookie to website and and correct mirrors.

--- a/data/404.html
+++ b/data/404.html
@@ -40,7 +40,8 @@
 This page does not exist. <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">Go back</a>.
 </p>
 <p>
-You may want to have a <a href="https://i.imgur.com/ksl2b1b.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>, <a href="https://i.imgur.com/ksl2b1b.jpeg"><i>mirror</i></a>.
+You may want to have a <a href="trevcan.duckdns.org/cookie.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>,  <a href="https://0x0.st/-5Ad.jpeg"><i>mirror</i></a>,
+<a href="https://i.imgur.com/ksl2b1b.jpeg"><i>another mirror</i></a>.
 </p>
 <p>
 Don't like cookies? <a href="https://0x0.st/-dGr.JPG">Have a <i>dog</i> instead</a>
