add 2d partial exam

--- a/data/.mit/ppg/2do.parcial.practica/index.html
+++ b/data/.mit/ppg/2do.parcial.practica/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html><html>
-	<meta encoding=utf-8 lang=es >
+<!DOCTYPE html>
+<html>
+	<meta charset=utf-8 lang=es >
 	<title>
 		Cuenta de correo empleado.
 	</title>
@@ -88,7 +89,7 @@
 				</tr>
 				<tr>
 					<td>
-						<input type=button onclick=generarCuenta() value="Generar Cuenta" > </button>
+						<input type=button onclick=generarCuenta() value="Generar Cuenta" ></input>
 					</td>
 
 					<td>
