remove hotlinks from wikipedia, change up 404

--- a/data/404.html
+++ b/data/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 		<title>404</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" type="image/png">
+		<link rel="shortcut icon" href="https://thetrevor.tech/files/assets/blog/Crystal_Clear_app_tux.png" type="image/png">
 		<link rel="stylesheet" href="main.css">
 
 
@@ -37,10 +37,10 @@
 	<i>Last edited: 11/08/2021 11:57:04 PM </i>
 
 <p>
-This page does not exist. <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">Go back</a>.
+This page does not exist. <a href="https://blog.thetrevor.tech/">Go to blog</a>.
 </p>
 <p>
-You may want to have a <a href="http://trevcan.duckdns.org/cookie.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>,  <a href="https://0x0.st/-5Ad.jpeg"><i>mirror</i></a>,
+You may want to have a <a href="https://thetrevor.tech/files/cookie.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>,  <a href="https://0x0.st/-5Ad.jpeg"><i>mirror</i></a>,
 <a href="https://i.imgur.com/ksl2b1b.jpeg"><i>another mirror</i></a>.
 </p>
 <p>
