--- a/data/404.html
+++ b/data/404.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html><html><head>
-		<title>404</title>
+		<title>trevcan: 404</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="https://thetrevor.tech/files/assets/blog/Crystal_Clear_app_tux.png" type="image/png">
-		<link rel="stylesheet" href="main.css">
-
-
+		<link rel="stylesheet" href="https://blog.thetrevor.tech/main.css">
 		<header>
 			<div>
-				<!-- 
-					<a href="https://trevcan.github.io"> 
-				-->
 				<a href="index">
-
-					<!--
-						<h1>trevcan@internets /random/path/idk $</h1>
-					-->
 					<h1>trevcan@internets /random/yourpath $</h1>
 				</a>
 				<div class="header-links">
@@ -25,57 +16,44 @@
 				</div>
 			</div>
 		</header>
-
-
-	</head><body>
-
+	</head>
+	<body>
 		<div class="container">
-<!--<div class="container">-->
+			<h1>404 Not Found</h1>
+			<p>
+			This page does not exist. <a href="https://blog.thetrevor.tech/">Go to blog</a>.
+			</p>
+			<p>
+			You may want to have a <a href="https://thetrevor.tech/files/cookie.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>,  <a href="https://0x0.st/-5Ad.jpeg"><i>mirror</i></a>,
+			<a href="https://i.imgur.com/ksl2b1b.jpeg"><i>another mirror</i></a>.
+			</p>
+			<p>
+			Don't like cookies? <a href="https://0x0.st/-dGr.JPG">Have a <i>dog</i> instead</a>
+			</p>
+			<!--</div>-->
 
-	<h1>404</h1>
+			<i> Tags: <b> </b></i>
+		</div>
+		<footer>
+			<span>
+				<b>By trevcan : Hector Canizales;</b>
+			</span>
+			<a href="LICENSE">
+				<span>© sometime to ∞</span>
+			</a>
+			<p>
+			<span>
+				<b>Powered by my </b>
+			</span>
+			<a href="https://github.com/trevcan/blogit">
+				<span>fork of blogit</span>
+			</a>
+			<span>
+				and tocttou's beautiful
+			</span>
+			<a href="https://github.com/tocttou/hacker-blog/blob/master/_sass/base.scss">
+				<span>css</span>
+			</a>
 
-	<i>Last edited: 11/08/2021 11:57:04 PM </i>
-
-<p>
-This page does not exist. <a href="https://blog.thetrevor.tech/">Go to blog</a>.
-</p>
-<p>
-You may want to have a <a href="https://thetrevor.tech/files/cookie.jpeg">cookie. <i>don't worry, I won't hijack your precious human statistics</i></a>,  <a href="https://0x0.st/-5Ad.jpeg"><i>mirror</i></a>,
-<a href="https://i.imgur.com/ksl2b1b.jpeg"><i>another mirror</i></a>.
-</p>
-<p>
-Don't like cookies? <a href="https://0x0.st/-dGr.JPG">Have a <i>dog</i> instead</a>
-</p>
-<!--</div>-->
-
-<i> Tags: <b> </b></i>
-</div>
-<footer>
-
-	<span>
-		<!--
-			<b>By trevcan : Hector Canizales;</b>
-		-->
-		<b>By trevcan : Hector Canizales;</b>
-	</span>
-	<a href="LICENSE">
-		<span>© sometime to ∞</span>
-	</a>
-	<p>
-	<span>
-		<b>Powered by my </b>
-	</span>
-	<a href="https://github.com/trevcan/blogit">
-		<span>fork of blogit</span>
-	</a>
-	<span>
-		and tocttou's beautiful
-	</span>
-	<a href="https://github.com/tocttou/hacker-blog/blob/master/_sass/base.scss">
-		<span>css</span>
-	</a>
-
-
-</footer>
-
+		</footer>
 </body></html>
