--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			trevcan's blog
 		</title>
 		<link href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Crystal_Clear_app_tux.png" rel="shortcut icon" type="image/png"/>
-		<link href="https://trevcan.duckdns.org/blog/main.css" rel="stylesheet"/>
+		<link href="https://thetrevor.tech/blog/main.css" rel="stylesheet"/>
 		<header>
 			<div>
 				<a href="http://trevcan.github.io/">
@@ -47,10 +47,10 @@
 				Redirecting to Trevcan's blog			</h1>
 			<p>
 			<h1>
-				https://trevcan.duckdns.org/blog/index.html
+				https://thetrevor.tech/blog/index.html
 
 			</h1>
-			<meta content="3; url=https://trevcan.duckdns.org/blog/index.html" http-equiv="refresh"/>
+			<meta content="3; url=https://thetrevor.tech/blog/index.html" http-equiv="refresh"/>
 		</div>
 		<footer>
 			<span>
