fix orthographic and formatting errors

--- a/vaaq/index.html
+++ b/vaaq/index.html
@@ -17,7 +17,7 @@
 			</p>
 
 				<p>	
-				Vicente Alarcón Aquino es Profesor de tiempo completo e Investigados en el Departamento Académico de
+				Vicente Alarcón Aquino es Profesor de tiempo completo e Investigador en el Departamento Académico de
 				Computación, Electrónica y Mecatrónica de la Universidad De las Américas Puebla (UDLAP).
 				</p>
 				<h2>Trayectoria Laboral</h2>
@@ -74,10 +74,10 @@ https://sites.google.com/site/vicentevialaq/home
 
 				<h2>Formación Académica y tesis realizadas</h2>
 				<ul>	
-					<li>Doctorado en Ingeniería Eléctrica y Electrónica. University of London, Imperial College of Science,</li>
-					<li>Technology and Medicine. Inglaterra. Junio 30, 2003.</li>
-					<li>Maestría en Ciencias en la Especialidad de Electrónica. Instituto Nacional de Astrofísica Óptica y</li>
-					<li>Electrónica . Mexico. Junio 30, 1993.</li>
+					<li>Doctorado en Ingeniería Eléctrica y Electrónica. University of London, Imperial College of Science,
+						Technology and Medicine. Inglaterra. Junio 30, 2003.</li>
+					<li>Maestría en Ciencias en la Especialidad de Electrónica. Instituto Nacional de Astrofísica Óptica y
+						Electrónica . Mexico. Junio 30, 1993.</li>
 					<li>Ingeniero Industrial en Electrónica. Instituto Tecnológico de Veracruz. Mexico. Junio 14, 1991.</li>
 				</ul>
 
