--- a/happy.wed.html
+++ b/happy.wed.html
@@ -48,85 +48,10 @@
 
 <p>big image</p>
 
-<div class="container-image">
-<style>
-/* https://www.w3schools.com/howto/howto_css_image_text.asp  */
+<p><a href="assets/happy.wed.29j.2025.jpeg"></p>
 
-/* Container holding the image and the text */
-.container-image {
-  position: relative;
-  text-align: center;
-  color: white;
-  text-align:left;
-  color:rgba(0,0,0,0);
-}
-
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.text-description {
-  position: absolute;
-  color: rgba(0,0,0,0);
-  font-size:46px;
-  line-height: 0.4;
-
-}
-
-body {
-    font-family: 'Courier New', monospace;
-
-}
-</style>
-
-
-  <img src="assets/happy.wed.29j.2025.jpeg" alt="Snow" style="width:100%;">
-
-  top: 415px;
-  left: 680px;
-  <div class="text-description" style="top: 385px; left: 680px;"><pre>
-i am happy. wednesday 29th january, year 2025.<br>
-                          unix epoch: 1738212160</pre></div>
-
-  <div class="text-description" style="top:540px;left:176.8px"<pre>
-the infrastructure was there, the fingers, the ssh keys. the digital
-<p style="">
-ocean credits, the life. everything good that could be almost<br><br>
-</p>
-anything i wanted. but digital life wasn't all. I had just started a        <br><br><br>
-dating profile because i felt all alone. but today i did not feel       <br><br><br><br><br><br>
-alone. I felt more alive and connected than in 369 days (number is just     <br><br><br><br><br><br><br>
-there for arbitrary purposes, just for the j0zjzz). It was nice re-     <br><br><br><br><br><br><br><br>
-meeting you Paolo. And Mari too, of course. Today is more of a greet        <br><br><br><br><br><br><br><br><br><br>
-ting card than anything. A thnak you to life for connecting me with these   <br><br><br><br><br><br><br><br><br><br><br>
-people. the words, the conversations, the smiles. this swas what feeling    <br><br><br><br><br><br><br><br><br><br><br><br>
-or being alive was meant to be for. and for preservvving our species as     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-well of course. sex is a thing you know? but i could pracyically be cons    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-idered asexual given my non-existen history of girlfriends or really any    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-intimate contact. i hope that changes this year. more to come definitely    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-.k. i am alive and am thzankful for that. i don't care at all what I've     <br><br><br><br><br><br><br>
-done before. well i have, maybe i didn't give enoguh recog. to Paoplo's song.bye
-
-    
-
-
-  </pre></div>
-
-  <!--
-  <div class="bottom-left">Bottom Left</div>
-  <div class="top-left">Top Left</div>
-  <div class="top-right">Top Right</div>
-  <div class="bottom-right">Bottom Right</div>
-  <div class="centered">Centered</div>
-  -->
-</div>
-
-
-
+<p><img src="assets/happy.wed.29j.2025.jpeg">
+</a></p>
 
 <i> Tags: <b> en write life </b></i>
 </div>
