--- a/index.html
+++ b/index.html
@@ -31,69 +31,13 @@
 	</head><body>
 
 		<div class="container">
-<a href="https://trevcan.github.io"><div style='font-size: small;' class="header-link">yes, https works</div></a>
+<a href="https://blog.thetrevor.tech"><div style='font-size: small;' class="header-link">yes, https works</div></a>
 
 <link rel="openid.delegate" href="https://blog.thetrevor.tech" />
 <link rel="openid.server" href="https://openid.indieauth.com/openid" />
 <link rel="me" href="https://github.com/trevcan" />
 <link rel="pgpkey" href="https://blog.thetrevor.tech/pubkey">
 <p>
-
-<p>
-
-
-<html>
-<head>
-<meta charset="utf-8">
-<style type="text/css">
-body{
-	background: black;
-}
-pre {
-  font-family:Courier New;
-  font-size:15pt;
-}
-
-.af_line {
-  color: gray;
-  text-decoration: none;
-}
-
-</style>
-<title>Source file</title>
-</head>
-<body>
-<pre>
-<span style="font-weight:bold;color:#ffffff;">
-
-&quot;Whatever you do will be insignificant, but it is very
-important that you do it.&quot;
--Mahatma Gandhi
-
-Wu wei
-</span><span style="font-weight:bold;color:#ff0000;">
-CONTROL your vices
-</span><span style="font-weight:bold;color:#00ffff;"> </span><span style="font-weight:bold;color:#ffffff;"> </span><span style="font-weight:bold;color:#ffff00;"> </span><span style="font-weight:bold;color:#ff00ff;"> </span><span style="font-weight:bold;color:#7f7f7f;"> </span><span style="font-weight:bold;color:#5c5cff;"> </span><span style="font-weight:bold;color:#ff0000;"> </span> <span style="color:#000000;"> </span><span style="color:#00cd00;">
-</span><span style="font-weight:bold;color:#ffff00;">vice </span><span style="font-weight:bold;color:#00ffff;"> </span><span style="font-weight:bold;color:#ffffff;"> </span><span style="font-weight:bold;color:#ffff00;"> </span><span style="font-weight:bold;color:#ff00ff;"> </span><span style="font-weight:bold;color:#7f7f7f;"> </span><span style="font-weight:bold;color:#5c5cff;"> </span><span style="font-weight:bold;color:#ff0000;"> </span> <span style="color:#000000;"> </span><span style="color:#00cd00;">(Merriam Webster)
-\ ˈvīs \
-Definition of vice (Entry 1 of 4)
-1.
-b: a moral fault or failing
-2. : BLEMISH, DEFECT
-5. : an abnormal behavior pattern in a domestic animal </span><span style="color:#cd0000;">
-detrimental to its health or usefulness.
-
-</span><span style="font-weight:bold;color:#ffffff;">carpe diem
-
-<span style="font-weight:bold;color:#7f7f7f;"></span><span style="font-weight:bold;color:#ff0000;">[</span><span style="font-weight:bold;color:#ffff00;">trevorlarbs</span><span style="font-weight:bold;color:#00ff00;">&#64;</span><span style="font-weight:bold;color:#5c5cff;">t490-4rch </span><span style="font-weight:bold;color:#ff00ff;">~vv</span><span style="font-weight:bold;color:#ff0000;">]</span>$ ? 0 
-
-</pre>
-</body>
-</html>
-
-
-</p>
-
 <details>
 	<summary><em>Tags: <div style='font-size: xx-small;'> click me to expand.</div></em></summary>
 
