--- a/my-terminal.n.html
+++ b/my-terminal.n.html
@@ -49,7 +49,7 @@
 
 
 <p>
-<iframe src=terminal.html width=800px height=600px >
+<iframe src=https://thetrevor.tech/terminal.html width=800px height=600px >
 </iframe>
 </p>
 
